--- a/package.json
+++ b/package.json
@@ -38,6 +38,8 @@
     "typescript": "^5.8.2"
   },
   "dependencies": {
+    "axios": "^1.8.2",
+    "dotenv": "^16.4.7",
     "prompts": "^2.4.2",
     "yargs": "^17.7.2"
   }
