feat: add customizable REPL prompt system with state indicators

--- a/.env.example
+++ b/.env.example
@@ -5,3 +5,14 @@ OLLAMA_MODEL=llama3
 # Application Settings
 LOG_LEVEL=info
 DEBUG=false 
+
+# Prompt Customization
+# PROMPT_STYLE=default # Options: default, emoji, minimal, detailed
+# PROMPT_COLOR_DEFAULT=blue
+# PROMPT_COLOR_READY=green
+# PROMPT_COLOR_BUSY=yellow
+# PROMPT_COLOR_ERROR=red
+# PROMPT_SYMBOL_DEFAULT=>
+# PROMPT_SYMBOL_READY=✓
+# PROMPT_SYMBOL_BUSY=⟳
+# PROMPT_SYMBOL_ERROR=✗ 
