--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
   },
   "dependencies": {
     "axios": "^1.8.2",
+    "chalk": "^4.1.2",
     "dotenv": "^16.4.7",
     "prompts": "^2.4.2",
     "yargs": "^17.7.2"
