--- a/package.json
+++ b/package.json
@@ -15,6 +15,9 @@
     "lint:fix": "eslint . --ext .ts --fix",
     "format": "prettier --write \"src/**/*.ts\"",
     "test": "jest",
+    "test:watch": "jest --watch",
+    "test:coverage": "jest --coverage",
+    "test:ci": "jest --ci --coverage",
     "test:logs": "tsc && node dist/bin/test-logs.js",
     "prepare": "husky"
   },
@@ -35,6 +38,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/jest": "^29.5.14",
     "@types/node": "^22.13.10",
     "@types/prompts": "^2.4.9",
     "@types/yargs": "^17.0.33",
@@ -44,8 +48,10 @@
     "eslint-config-prettier": "^10.1.1",
     "eslint-plugin-prettier": "^5.2.3",
     "husky": "^9.0.11",
+    "jest": "^29.7.0",
     "lint-staged": "^15.2.1",
     "prettier": "^3.5.3",
+    "ts-jest": "^29.2.6",
     "typescript": "^5.8.2"
   },
   "dependencies": {
